--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ django-redis = "^5.4.0"
 redis = "^6.4.0"
 mysqlclient = "^2.2.4"
 psutil = "^7.1.3"
+defusedxml = "^0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 djlint = "^1.34.1"
